--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,28 +1,63 @@
 body {
   margin: 0;
+  padding-top: 2em;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
 
-header ul li {
-  width: 20%;
+#root {
+  width: 15%;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+section {
+  padding: 0.5em 0;
+}
+
+h3,
+h4 {
+  margin: 8px;
+  padding: 0 8px;
 }
 
 form {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+}
+
+input {
+  padding: 5px 5px 5px;
+  margin: 5px 0;
 }
 
 ul,
 ol {
   list-style-type: none;
+}
+
+a:hover {
+  color: red;
+}
+
+a:active {
+  color: red;
+}
+
+.goal-completed {
+  text-decoration: line-through;
 }
 
 code {
